--- a/app/src/main/res/layout/layout_bottom_sheet_photo.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo.xml
@@ -83,6 +83,7 @@
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:gravity="center"
+            android:layout_above="@id/ly_empty"
             android:orientation="horizontal">
 
             <com.github.chrisbanes.photoview.PhotoView
@@ -92,6 +93,14 @@
                 android:scaleType="fitCenter"/>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly_empty"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/shape_bottom_sheet_preview"
+            android:orientation="vertical"/>
 
         <LinearLayout
             android:id="@+id/ly_option"
@@ -104,6 +113,7 @@
             android:paddingRight="10dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/ly_header"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:gravity="center"
