--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="purple_200">#2eac68</color>
     <color name="purple_500">#3F51B5</color>
-    <color name="purple_700">#000000</color>
+    <color name="purple_700">#1c2a35</color>
+    <color name="alert_color">#CD5E5C</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
