--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="purple_200">#405aa5</color>
     <color name="purple_500">#405aa5</color>
-    <color name="purple_700">#00174b</color>
+    <color name="purple_700">#405aa5</color>
+    <color name="alert_color">#CD5E5C</color>
 
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
