--- a/app/src/main/res/layout/layout_bottom_sheet_photo.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_photo.xml
@@ -34,6 +34,7 @@
                 app:cardElevation="0dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img_premium"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerInside"
