--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -109,108 +109,118 @@
                             android:adjustViewBounds="true"
                             tools:src="@drawable/ic_launcher_background" />
 
-                    </RelativeLayout>
+                        <eightbitlab.com.blurview.BlurView
+                            android:id="@+id/blur_view_background"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_alignParentBottom="true"
+                            app:blurOverlayColor="#33FFFFFF">
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/ly_detail_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:gravity="center|right"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_wallpaper"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            app:cardBackgroundColor="@android:color/transparent"
-                            app:cardCornerRadius="15dp"
-                            app:cardElevation="0dp">
-
-                            <LinearLayout
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:id="@+id/ly_detail_image"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:gravity="center|right"
-                                android:orientation="horizontal">
-
-                                <ProgressBar
-                                    android:id="@+id/progress_bar_wallpaper"
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_marginEnd="10dp"
-                                    android:visibility="gone"
-                                    tools:visibility="visible" />
-
-                                <androidx.appcompat.widget.AppCompatTextView
-                                    android:id="@+id/text_view_wallpaper"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="@string/string_wallpaper_images"
-                                    android:textColor="@color/white"
-                                    android:textSize="13dp"
-                                    android:textStyle="bold" />
-
-                                <ImageView
-                                    android:id="@+id/image_view_wallpaper"
-                                    android:layout_width="35dp"
-                                    android:layout_height="35dp"
-                                    android:src="@drawable/ic_gallery_detail" />
-
-
-                            </LinearLayout>
-
-
-                        </androidx.cardview.widget.CardView>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/card_line"
-                            android:layout_width="2dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="7dp"
-                            app:cardBackgroundColor="#ffffff"
-                            app:cardCornerRadius="5dp" />
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_share"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            app:cardBackgroundColor="@android:color/transparent"
-                            app:cardCornerRadius="15dp"
-                            app:cardElevation="0dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="50dp"
                                 android:gravity="center"
                                 android:orientation="horizontal"
-                                android:paddingEnd="5dp">
+                                android:padding="7dp">
 
-                                <androidx.appcompat.widget.AppCompatTextView
-                                    android:id="@+id/text_view_share"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="7dp"
-                                    android:gravity="center"
-                                    android:text="@string/string_download_share"
-                                    android:textColor="@color/white"
-                                    android:textSize="13dp"
-                                    android:textStyle="bold" />
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/card_wallpaper"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="2"
+                                    android:layout_height="match_parent"
+                                    app:cardBackgroundColor="#33FFFFFF"
+                                    app:cardCornerRadius="10dp"
+                                    app:cardElevation="0dp">
 
-                                <ImageView
-                                    android:id="@+id/image_view_share"
-                                    android:layout_width="35dp"
-                                    android:layout_height="35dp"
-                                    android:scaleType="fitCenter"
-                                    android:src="@drawable/ic_share_detail" />
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:gravity="center"
+                                        android:orientation="horizontal">
+
+                                        <ProgressBar
+                                            android:id="@+id/progress_bar_wallpaper"
+                                            android:layout_width="20dp"
+                                            android:layout_height="20dp"
+                                            android:layout_marginEnd="10dp"
+                                            android:visibility="gone"
+                                            tools:visibility="visible" />
+
+                                        <androidx.appcompat.widget.AppCompatTextView
+                                            android:id="@+id/text_view_wallpaper"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="center"
+                                            android:text="@string/string_wallpaper_images"
+                                            android:textColor="@color/white"
+                                            android:textSize="13dp"
+                                            android:textStyle="bold" />
+
+                                        <ImageView
+                                            android:id="@+id/image_view_wallpaper"
+                                            android:layout_width="35dp"
+                                            android:layout_height="35dp"
+                                            android:src="@drawable/ic_gallery_detail" />
 
 
-                            </LinearLayout>
+                                    </LinearLayout>
 
 
-                        </androidx.cardview.widget.CardView>
+                                </androidx.cardview.widget.CardView>
+
+                                <com.google.android.material.card.MaterialCardView
+                                    android:id="@+id/card_line"
+                                    android:layout_width="2dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_margin="7dp"
+                                    app:cardBackgroundColor="#ffffff"
+                                    app:cardCornerRadius="5dp" />
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/card_share"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="match_parent"
+                                    app:cardBackgroundColor="#33FFFFFF"
+                                    app:cardCornerRadius="10dp"
+                                    app:cardElevation="0dp">
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:gravity="center"
+                                        android:orientation="horizontal">
+
+                                        <androidx.appcompat.widget.AppCompatTextView
+                                            android:id="@+id/text_view_share"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginLeft="7dp"
+                                            android:gravity="center"
+                                            android:text="@string/string_download_share"
+                                            android:textColor="@color/white"
+                                            android:textSize="13dp"
+                                            android:textStyle="bold" />
+
+                                        <ImageView
+                                            android:id="@+id/image_view_share"
+                                            android:layout_width="35dp"
+                                            android:layout_height="35dp"
+                                            android:scaleType="fitCenter"
+                                            android:src="@drawable/ic_share_detail" />
 
 
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                                    </LinearLayout>
+
+
+                                </androidx.cardview.widget.CardView>
+
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+
+                        </eightbitlab.com.blurview.BlurView>
+
+                    </RelativeLayout>
 
                 </LinearLayout>
 
