--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#2eac68</color>
-    <color name="purple_500">#3F51B5</color>
+    <color name="purple_500">#1c2a35</color>
     <color name="purple_700">#1c2a35</color>
     <color name="alert_color">#CD5E5C</color>
     <color name="status_bar_color">#B3000000</color>
