--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -20,7 +20,7 @@
             android:gravity="center|right"
             android:orientation="horizontal"
             android:paddingLeft="15dp"
-            android:paddingRight="5dp">
+            android:paddingRight="15dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_view_back_toolbar_detail"
@@ -44,40 +44,16 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_download"
+            <TextView
+                android:id="@+id/text_view_detail_title"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/text_view_download"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/string_download_images"
-                        android:textColor="@color/white"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/image_view_download"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_download_detail" />
-
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-            </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:text="جزئیات عکس"
+                android:textStyle="bold"
+                tools:text="جزئیات عکس"
+                android:gravity="center"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -271,18 +247,54 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center|right"
                             android:layout_marginTop="4dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginBottom="10dp"
+                            android:paddingLeft="7dp"
+                            android:gravity="center|right"
                             android:orientation="horizontal">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/card_download"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                app:cardBackgroundColor="@color/color_download_button"
+                                app:cardCornerRadius="10dp"
+                                app:cardElevation="0dp">
+
+                                <androidx.appcompat.widget.LinearLayoutCompat
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:orientation="horizontal"
+                                    android:paddingLeft="10dp"
+                                    android:paddingRight="0dp">
+
+                                    <androidx.appcompat.widget.AppCompatTextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:text="@string/string_download_images"
+                                        android:layout_marginRight="7dp"
+                                        android:textColor="@color/white"
+                                        android:textSize="14sp" />
+
+                                    <ImageView
+                                        android:layout_width="35dp"
+                                        android:layout_height="35dp"
+                                        android:background="#1A151515"
+                                        android:src="@drawable/ic_download_detail" />
+
+
+                                </androidx.appcompat.widget.LinearLayoutCompat>
 
 
                             </com.google.android.material.card.MaterialCardView>
+
+                            <Space
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="wrap_content"
@@ -313,7 +325,7 @@
                                 android:layout_width="142dp"
                                 android:layout_height="90dp"
                                 android:layout_marginRight="10dp"
-                                android:visibility="invisible"
+                                android:visibility="gone"
                                 app:cardCornerRadius="10dp"
                                 tools:visibility="visible">
 
@@ -328,33 +340,33 @@
                                         android:scrollbars="none"
                                         tools:ignore="WebViewLayout" />
 
-                                    <eightbitlab.com.blurview.BlurView
-                                        android:id="@+id/blur_view_map"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="25dp"
-                                        android:layout_alignParentBottom="true"
-                                        app:blurOverlayColor="#33FFFFFF">
+<!--                                    <eightbitlab.com.blurview.BlurView-->
+<!--                                        android:id="@+id/blur_view_map"-->
+<!--                                        android:layout_width="match_parent"-->
+<!--                                        android:layout_height="25dp"-->
+<!--                                        android:layout_alignParentBottom="true"-->
+<!--                                        app:blurOverlayColor="#33FFFFFF">-->
 
-                                        <LinearLayout
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:orientation="vertical">
+<!--                                        <LinearLayout-->
+<!--                                            android:layout_width="match_parent"-->
+<!--                                            android:layout_height="match_parent"-->
+<!--                                            android:orientation="vertical">-->
 
-                                            <androidx.appcompat.widget.AppCompatTextView
-                                                android:id="@+id/text_view_"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:gravity="center"
-                                                android:text="بزرگنمایی نقشه"
-                                                android:textColor="@color/black"
-                                                android:textSize="13dp"
-                                                android:visibility="visible"
-                                                tools:text="loacation" />
+<!--                                            <androidx.appcompat.widget.AppCompatTextView-->
+<!--                                                android:id="@+id/text_view_"-->
+<!--                                                android:layout_width="match_parent"-->
+<!--                                                android:layout_height="match_parent"-->
+<!--                                                android:gravity="center"-->
+<!--                                                android:text="بزرگنمایی نقشه"-->
+<!--                                                android:textColor="@color/black"-->
+<!--                                                android:textSize="13dp"-->
+<!--                                                android:visibility="visible"-->
+<!--                                                tools:text="loacation" />-->
 
-                                        </LinearLayout>
+<!--                                        </LinearLayout>-->
 
 
-                                    </eightbitlab.com.blurview.BlurView>
+<!--                                    </eightbitlab.com.blurview.BlurView>-->
 
                                 </RelativeLayout>
 
@@ -475,25 +487,38 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:orientation="horizontal"
-                            android:paddingLeft="10dp">
+                            android:paddingLeft="10dp"
+                            >
+                            <RelativeLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
 
-                            <com.google.android.material.card.MaterialCardView
-                                android:id="@+id/card_view_profila"
-                                android:layout_width="70dp"
-                                android:layout_height="70dp"
-                                app:cardCornerRadius="50dp"
-                                app:cardElevation="0dp"
-                                app:strokeColor="@color/purple_200"
-                                app:strokeWidth="2dp">
+                                <View
+                                    android:layout_width="74dp"
+                                    android:layout_height="74dp"
+                                    android:layout_centerInParent="true"
+                                    android:background="@drawable/shape_isntagram_profile"/>
 
-                                <ImageView
-                                    android:id="@+id/image_view_profile"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    tools:src="@drawable/ic_user" />
+                                <com.google.android.material.card.MaterialCardView
+                                    android:id="@+id/card_view_profila"
+                                    android:layout_width="70dp"
+                                    android:layout_height="70dp"
+                                    android:layout_centerInParent="true"
+                                    app:cardCornerRadius="100dp"
+                                    app:cardElevation="0dp">
 
-                            </com.google.android.material.card.MaterialCardView>
+                                    <ImageView
+                                        android:id="@+id/image_view_profile"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:scaleType="centerCrop"
+                                        tools:src="@drawable/ic_user" />
+
+                                </com.google.android.material.card.MaterialCardView>
+
+
+                            </RelativeLayout>
+
 
                             <androidx.appcompat.widget.LinearLayoutCompat
                                 android:layout_width="0dp"
