--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,4 +16,6 @@
     <color name="color_background_fragments">#171e24</color>
     <color name="color_background_action_bar">#1c2a35</color>
     <color name="color_background_preview_menu">#10161B</color>
+    <color name="color_download_button">#2eac68</color>
+    <color name="color_download_popup">#2eac68</color>
 </resources>
