--- a/app/src/main/res/layout/layout_alerter.xml
+++ b/app/src/main/res/layout/layout_alerter.xml
@@ -45,7 +45,7 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                app:srcCompat="@drawable/ic_delete_logo"
+                app:srcCompat="@drawable/ic_delete_photo"
                 app:tint="@color/white" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
